# BRITON

./: .gitignore  CMakeLists.txt  FENGEN.py  Globals.h  NERO-Chess.pgn  Pipfile  README.md  app.py  application.py  attack.cpp  attack.h  bitboards.cpp  bitboards.h  board.cpp  board.h  callgrind.out.1965  chess  compile  compilecommand.txt  defs.h  evaluate.cpp  evaluate.h  flask_app.py  gmon.out  hashkey.cpp  hashkey.h  init.cpp  init.h  io.cpp  io.h  main.cpp  makemove.cpp  makemove.h  mirrorTest.txt  misc.cpp  misc.h  move.cpp  move.h  movegen.cpp  movegen.h  (+13 more)
src/: Bitboard.cpp  Bitboard.h  Position.cpp  Position.h  TranspositionTable.cpp  TranspositionTable.h  Types.h  bitops.cpp  bitops.h  eval.cpp  eval.h  init.cpp  init.h  main.cpp  misc.cpp  misc.h  movegen.cpp  movegen.h  perft.cpp  perft.h  search.cpp  search.h
static/: chess.js  chessboard-0.3.0.css  chessboard-0.3.0.js  chessboard-0.3.0.min.js  game.js  game.min.js  jquery-1.10.1.js
templates/: Chess.html
